Fix tagged navigation icon spacing

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -346,9 +346,13 @@ $spv-navigation-logo-bottom-position: 0.125rem; // 2px when 1rem is 16px
     }
 
     .p-navigation__logo-tag {
+      align-items: flex-end;
       background-color: $color-ubuntu;
+      display: flex;
       height: $navigation-logo-tag-height;
+      justify-content: center;
       left: 0;
+      padding-bottom: $spv-navigation-logo-bottom-position;
       position: absolute;
       top: 0;
       width: $navigation-logo-tag-width;
@@ -359,11 +363,7 @@ $spv-navigation-logo-bottom-position: 0.125rem; // 2px when 1rem is 16px
     }
 
     .p-navigation__logo-icon {
-      bottom: $spv-navigation-logo-bottom-position;
       height: $navigation-logo-size;
-      left: 50%;
-      position: absolute;
-      transform: translate(-50%, 0);
       width: $navigation-logo-size;
     }
 
